specs/app/logging/1.0.2/spec.md
#Application Logging Specification 1.0.2 (Dart , C#)
###**Status: Finalized**
As our gen2 application frameworks are built out and we move to a unified compositional architecture, logging will be critical to ensuring our developers and stakeholders can maintain healthy and performant next-gen systems. 

Standardised logging across all of our applications is going to be critical. This document details the standards we will use to perform our logging.

This spec is closely related to the existing Harbour spec.

###Sources of logging
Log information is expected to originate from:

- Dart-based (javascript) browser applications involving both authenticated and unauthenticated users from both trusted and untrusted networks.
- Dart-based server applications involving both authenticated and unauthenticated users from only trusted networks.

While having a holistic view of an application and its interactions with other services/users is desirable, we must also balance the performance impact this may have on the browser/network connections and by extension, the user.  This requires we support batching log messages and bulk-sending them.

###Authenticated vs Non-Authenticated

There are use cases for both authenticated and unauthenticated logging.  We expect the frequency of logging to be higher for authenticated users than for unauthenticated users.  One concern with allowing unauthenticated logging is the potential for DOS types of attacks.  To mitigate this risk, we can rate-limit logging for unauthenticated users based on headers.

###CorrelationId

An HTTP request from a browser client may interact with many internal services to provide the correct response. An example would be the datatables app talking to an endpoint that results in some persisted state changing. If an error occurred in the endpoint/service, the request would fail and the customer may contact support. Looking at the datatables app logs we might see the error but it is going to be very difficult to match it to subsequent log messages (and telemetry) originating from the client without some way to correlate the requests.  The inverse is also important in that we may want to verify that the client has properly acted on a successful request and any logging related to this scenario should also be correlated.

Each request coming from the client will contain a unique-per-request X-Workiva-Request-Id header that is generated by the individual app itself.  This value must be used in any logging related to the original request by that app. This allows us to correlate browser-originated logs with server-originated logs.

###Browser Client logging

All Workiva browser/mobile clients must adhere to the same logging standards. Each browser client is expected to use the same library for logging to ensure this expectation.  This library will forward logs to a specific endpoint hosted on a centralised endpoint per environment (e.g. local, wk-dev, sandbox).

That endpoint will be a web-service endpoint located at:___________________________.

It accepts json encoded log messages of the format:

```json
{
  "entries":[
    {
      "version":"1.0",
      "timestamp":"2016-08-25T17:46:58.609761Z",
      "message":"route path=/ startingFrom=null forceReload=false",
      "level":"debug",
      "metadata":{
        "logger":"route",
        "clientId":"c8cdce75-7485-447e-ad74-47a783821b1f",
        "source":"Client_Web",
        "browser_string":"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_5) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/45.0.2454.104 (Dart) Safari/537.36",
        "screen_resolution":"1440 x 900",
        "viewport":"1058 x 828",
        "orientation":"Landscape",
        "flash_version":"unknown",
        "host":"localhost",
        "app_name":"w_comments"
      },
      "context":{

      }
    },
    {
      "version":"1.0",
      "timestamp":"2016-08-25T17:46:58.629717Z",
      "message":"Instance of 'LogEntry'",
      "level":"debug",
      "metadata":{
        "logger":"app-intelligence",
        "clientId":"c8cdce75-7485-447e-ad74-47a783821b1f",
        "source":"Client_Web",
        "browser_string":"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_5) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/45.0.2454.104 (Dart) Safari/537.36",
        "screen_resolution":"1440 x 900",
        "viewport":"1058 x 828",
        "orientation":"Landscape",
        "flash_version":"unknown",
        "host":"localhost",
        "app_name":"w_comments"
      },
      "context":{

      }
    }
  ]
}
 ```

This will be forwarded to ________________________ and indexed.

###Format specification
**Types:**

- *string*: All strings must be UTF-8 encoded unless otherwise specified.
- *datetime*: All dates/datetimes must be RFC-3339 (section 5.6) formatted datetime. The timezone MUST be UTC. Max resolution is 1 millisecond - any value provided beyond that will be truncated. That is, a maximum of 6 decimal places must be output.
- *strict map*: A map of key/value pairs within which only the defined keys can be supplied. Any other keys will be ignored/dropped by other parts of the logging system.
- *map*: A map of key/value pairs that can contain any arbitrary number of elements. All values must be JSON scalars. string, number and boolean are supported. null elements will not be indexed and so for brevity must not be supported.

Key  | Required | Type | Description
---- | -------- | ---- | ----------- 
version | Yes | string | This is the version of the log format. Provides support for log formats as they evolve. Note that this may not necessarily be the same as the "Harbour Logging format". Details, notes and upgrade instructions should be provided when this version changes
timestamp | Yes | datetime | originates from client/browser clock
message | Yes | string | Contains the logging data from the process/application.
exception | No | strict map | If there is an exception recorded as part of the logging message, it must be recorded here.
exception.type | No | string | The exception type, if any. E.g. in Dart this might be: StateError, InvalidCastError 
exception.stacktrace | Yes | string | A stringified representation of the language contextual stacktrace. 
exception.message| Yes | string | The message that was supplied along with the exception. 
name | No | string | The name of the logger if applicable. 
level | Yes | string | The level at which this data was logged at. Supported values are "debug", "info", "warning", "error", "critical".
context | No | strict map | key => value map of workiva specific metadata. The keys and their corresponding values are tightly controlled in this format. Keys are not required. If any value is "null", "None", "nil", or empty etc. (language contextual) then they must be omitted from this map. Only keys specified in this document must be allowed in this map.
context.correlationId | No | string | See the "CorrelationId" section of this document.
context.accountResourceId | No | string | If the accountResourceId is available, it must be supplied here.
context.userResourceId | No | string | If the userResourceId is available, it must be supplied here.
context.sessionId | No | string | Must be the hashed version of the session id. See OMNI/InfoSec for the specifications of this.
context.membershipResourceId | No | string | If the membershipResourceId id is available, it must be supplied here.
context.documentId | No | string | If the document id is available, it must be supplied here.
context.sectionId | No | string | If the section id is available, it must be supplied here.
metadata | No | map | key => value map of useful information related to the logging message.
app.id | Yes | string | The app identifier (some unique identifier). 
app.name | Yes | string | The common name for this application. 

